--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "reactstrap": "^9.2.1",
+    "sass": "^1.69.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
